--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
 
+<html>
+ <head>
+  <link rel="stylesheet" href="style.css"/>
+</head>
+<body>
+ <header>
+     <img src="https://onecar.com.ua/img/sto/logo.svg">
+     <h1>OneCar</h1>
+     <h2>автосервіс</h2>
+     <h3>обслуговуваня вашого авто </h3>
+   <nav>
+              <a href="">головна</a>
+            <a href="">наші послуги</a>
+          <a href="">про нас</a>
+        <a href="">Контакти</a>
+        </nav>
+ </header> 
+</body>
+</html>
