--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
               <a href="">головна</a>
             <a href="">наші послуги</a>
           <a href="">про нас</a>
-        <a href="">Контакти</a>
+        <a href="https://m1lok.github.io/CTO/">Контакти</a>
         </nav>
  </header> 
 </body>
