--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 +38 (097) 876-79-84
 Швидкий запис на автосервіс в Києві </h3>
    <nav>
-              <a href="">головна</a>
+              <a href="https://m1lok.github.io/CTO/">головна</a>
             <a href="">наші послуги</a>
           <a href="">про нас</a>
-        <a href="https://m1lok.github.io/CTO/">Контакти</a>
+        <a href="">Контакти</a>
         </nav>
  </header> 
 </body>
