--- a/index.html
+++ b/index.html
@@ -8,10 +8,7 @@
      <img src="https://onecar.com.ua/img/sto/logo.svg">
      <h1>OneCar</h1>
      <h2>автосервіс</h2>
-     <h3>Контакти автосервісу в Києві
-+38 (073) 161-55-89
-+38 (097) 876-79-84
-Швидкий запис на автосервіс в Києві </h3>
+     <h3>Швидкий запис на автосервіс в Києві </h3>
    <nav>
               <a href="https://m1lok.github.io/CTO/">головна</a>
             <a href="">наші послуги</a>
