--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
  <header>
      <img src="https://onecar.com.ua/img/sto/logo.svg">
      <h1>OneCar</h1>
-     <h2>автосервіс</h2>
+     <h2>наші контакти </h2>
      <h3>Швидкий запис на автосервіс в Києві </h3>
    <nav>
               <a href="https://m1lok.github.io/CTO/">головна</a>
