--- a/index.html
+++ b/index.html
@@ -16,5 +16,12 @@
         <a href="">Контакти</a>
         </nav>
  </header> 
+  <footer>
+Контакти автосервісу в Києві
+   <br>
++38 (063) 153-72-26
+   <br>
++38 (067) 519-43-44
+   </footer>
 </body>
 </html>
