--- a/index.html
+++ b/index.html
@@ -25,6 +25,14 @@
 +38 (063) 153-72-26
    <br>
 +38 (067) 519-43-44
+   <br
+    ЯК З НАМИ ЗВ'ЯЗАТИСЯ?
+   <br>
+Ви можете зателефонувати за вказаними телефонами,
+   <br>
+   а також записатися через месенджери.
+   <br>
+   Наші оператори на зв'язку 24 \ 7.
    </footer>
 </body>
 </html>
