--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
    <nav>
               <a href="https://m1lok.github.io/CTO/">головна</a>
             <a href="">наші послуги</a>
-          <a href="">вакансії</a>
+          <a href="https://m1lok.github.io/CTO-about_us/">вакансії</a>
         <a href="">Контакти</a>
         </nav>
  </header> 
