--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
      <h3>Швидкий запис на автосервіс в Києві </h3>
    <nav>
               <a href="https://m1lok.github.io/CTO/">головна</a>
-            <a href="">наші послуги</a>
+            <a href="https://m1lok.github.io/CTO_Our_services/">наші послуги</a>
           <a href="https://m1lok.github.io/CTO-about_us/">вакансії</a>
         <a href="">Контакти</a>
         </nav>
